PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-119_division_invalide3/gcc-compile.txt
input.c:3:12: error: expected expression
    return /;
           ^
input.c:3:13: error: expected expression
    return /;
            ^
2 errors generated.

return code: 1
